fix dropdown spacing

--- a/Website/AirbnbNegotiate/Negot/static/Negot/css/style.css
+++ b/Website/AirbnbNegotiate/Negot/static/Negot/css/style.css
@@ -361,7 +361,7 @@ select.form-control {
     display: none;
     padding-top: 20px;
 }
-.filters-more .col-sm-11 {
+.filters-more .filters-radio {
     margin-bottom: 5px;
 }
 
